Fixed BUG#3294: Stored procedure crash if table dropped before use.   Dropping the table was not the real problem, the problem was with errors   occuring within error handlers.